# smtp-pushover

./: .env.exampe  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  email_handler.py  main.py  pushover_notifier.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
smtp_pushover/: email_handler.py  main.py  pushover_notifier.py
